Disabled x overflow, fixed overflowing container, changed hero text to white on medium screens

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 @font-face {
     font-family: 'Gagalin';
@@ -496,7 +497,8 @@ footer{
     }
     
     .business-hours-container{
-        width: 90%;
+        width: 100%;
+        min-width: 250px;
     }
     .business-hours-table{
         height: auto;
@@ -562,5 +564,10 @@ footer{
         margin: 0;
         padding: 10%;
         box-sizing: border-box;
+        color: white;
+        text-shadow: 1px 1px 3px black;
+    }
+    #header-btn{
+        color: white;
     }
 }
